# JSinfinity

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  following.txt  make.txt
.VSCodeCounter/2022-07-15_04-06-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-07-15_04-07-27/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-07-15_04-08-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
JSinfinity/: make.txt
JSinfinity/package/: Gtkpack.h
appmaker/jsinterpretor/: make.txt
appmaker/jsinterpretor/include/: defs.h  gui.h
appmaker/jsinterpretor/source/: gui.cpp  main.cpp  system.cpp
code/package/: Gtkpack.cpp
jsinterpretor/: make.txt
jsinterpretor/include/: defs.h  gui.h  io.h  system.h
jsinterpretor/source/: gui.cpp  io.cpp  main.cpp  system.cpp
package/: CMakeLists.txt  Gtkpack.cpp  Gtkpack.h  cmake_install.cmake  defs.h
package/jltk/: CMakeLists.txt  boxobject.cpp  browserobjt.cpp  buttonobject.cpp  cmake_install.cmake  colorchooser.cpp  command.txt  doublewindow.cpp  filechooser.cpp  imageobject.cpp  jltk.cpp  jltk.h  labelobject.cpp  menubar.cpp  menuitem.cpp  progressobject.cpp  radiobutton.cpp  scroll.cpp  scrollbar.cpp  spinnerobject.cpp  texteditor.cpp  tooltipobject.cpp  treeobject.cpp
tools/: README.md  manager.js  virtualenv.js
